--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -17,10 +17,10 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
       #### Install Gigapipe Open-Source on your Infrastructure.
 
       <Tabs>
-            <Tab label="Quick Start">
+            <Tab label="Quickstart">
             Quick Start? Use our [OSS Gigapipe Demo](https://github.com/metrico/gigapipe-oss-demo)
 
-            The Demo ships ready with Gigapipe, Grafana, ClickHouse and everything you need!<br>
+            The Demo ships ready with Gigapipe, Grafana, ClickHouse and everything you need!<br/>
             Batteries include configs, data generators and datasources for: 
             - Logs
             - Metrics
