--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -20,8 +20,8 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             <Tab label="Quickstart">
             Quick Start? Use our [OSS Gigapipe Demo](https://github.com/metrico/gigapipe-oss-demo)
 
-            The Demo ships ready with Gigapipe, Grafana, ClickHouse and everything you need!<br/>
-            Batteries include configs, data generators and datasources for: 
+            The Demo ships with Gigapipe, Grafana, ClickHouse ready to use<br/>
+            _🔋 Batteries include configs, data generators and datasources:_ 
             - Logs
             - Metrics
             - Traces
