--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -21,11 +21,8 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             Quick Start? Use our [OSS Gigapipe Demo](https://github.com/metrico/gigapipe-oss-demo)
 
             The Demo ships with Gigapipe, Grafana, ClickHouse ready to use<br/>
-            _🔋 Batteries include configs, data generators and datasources:_ 
-            - Logs
-            - Metrics
-            - Traces
-            - Profiles
+            <br/>
+            _🔋 Batteries include configs, data generators and datasources_ 
 
             </Tab>
             <Tab label="Docker">
@@ -68,7 +65,7 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
 
       ### Step 2
 
-      #### Configure your Observability Agents to send Logs, Metrics and Traces to Gigapipe
+      #### Configure your Observability Agents to send Data to Gigapipe
 
       <Tabs>
             <Tab label="Logs">
@@ -113,7 +110,7 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
 
       ### Step 3
 
-      #### Use Grafana to _auto-connect_ your Gigapipe OSS and start Exploring your data
+      #### Use Grafana to start Exploring your Gigapipe dataset
       Gigapipe is compatible with Grafana Loki, Prometheus, Tempo and Pyroscope datasources
       <br/>
 
