--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -21,8 +21,7 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             Quick Start? Use our [OSS Gigapipe Demo](https://github.com/metrico/gigapipe-oss-demo)
 
             The Demo ships with Gigapipe, Grafana, ClickHouse ready to use<br/>
-            <br/>
-            _🔋 Batteries include configs, data generators and datasources_ 
+            _🔋 Batteries include configs, data and datasources_ 
 
             </Tab>
             <Tab label="Docker">
