--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -20,9 +20,9 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             <Tab label="Quickstart">
             Quick Start? Use our [OSS Gigapipe Demo](https://github.com/metrico/gigapipe-oss-demo)
 
-            The Demo ships with Gigapipe, Grafana, ClickHouse ready to use<br/>
+            The demo ships with Gigapipe, Grafana and ClickHouse ready to use<br/>
 
-            _🔋 Batteries include configs, data and datasources_ 
+            _🔋🔋🔋 batteries included - ships with config, data and datasources_ 
 
             </Tab>
             <Tab label="Docker">
