--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -105,7 +105,9 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
 
       If you've used **Grafana** or **Grafana Cloud** before, _You will feel right at home._ 
 
-      ... and since there's nothing new to learn, the Team can just focus on _data._ **Whoo-hoo!** 🎉 
+      ... and since there's nothing new to learn, the Team can just focus on _data._ 
+
+      **Whoo-hoo!** 🎉 
 
       ##### Advanced Features
 
