--- a/docs/docs/ingestion.mdx
+++ b/docs/docs/ingestion.mdx
@@ -2,7 +2,7 @@ import { Tab, Tabs } from 'rspress/theme';
 
 # Data Ingestion with Gigapipe
 
-Gigapipe provides a polyglot and robust data ingestion API - supporting logs, metrics, traces, profiling - compatibile with a wide range of protocols, agents, and APIs, allowing collection of observability data from diverse sources, agents and vendors into a unified platform.
+Gigapipe provides a polyglot and robust data ingestion API - supporting logs, metrics, traces, profiling - compatibile with a wide range of protocols, agents, and APIs
 
 <Tabs>
     <Tab label="Logs">
