--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -9,7 +9,7 @@ import { PackageManagerTabs } from 'rspress/theme';
 
 # We 💜 Polyglot Observability
 
-> Polyglot comes from Greek _polyglōttos_, (**poly** - _"many" or "multi"_ - and **glōtta** for _"language_).
+> Polyglot comes from Greek _polyglōttos_, (**poly** - _"many" or "multi"_ - and **glōtta** for _"language_)
 
 <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7134953034576502786?compact=1" height="399" width="710" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
 
