--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -28,7 +28,7 @@ Unlike traditional observability tools Gigapipe does not require custom software
 <a href="/about"><img src="/qryn_cloud.png" alt="qryn_cloud" /></a>
 
 <br/>
-<img src="https://user-images.githubusercontent.com/1423657/232089970-c4536f16-5967-4051-85a5-8ad94fcde67c.png" height=50 />&nbsp; <img src="https://github.com/metrico/qryn/assets/1423657/546faddb-fbc6-4af5-9e32-4db6da10915d" height=49 />
+<img src="https://user-images.githubusercontent.com/1423657/232089970-c4536f16-5967-4051-85a5-8ad94fcde67c.png" height="50" /><img src="https://github.com/metrico/qryn/assets/1423657/546faddb-fbc6-4af5-9e32-4db6da10915d" height="49" />
 
 </div>
 <div className="custom-footer">
