--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -26,10 +26,8 @@ Unlike traditional observability tools that silo data and require running multip
 Unlike traditional observability tools Gigapipe does not require custom software. We natively ingest Opentelemetry, Loki, Prometheus, Tempo, Pyroscope, Datadog, Influx, Elastic using thousands of compatible Agents you can choose from. Our query API emulates Loki, Prometheus, Tempo and Pyroscope. _If you used Grafana before, you can use Gigapipe._
 
 <a href="/about"><img src="/qryn_cloud.png" alt="qryn_cloud" /></a>
-
 <br/>
-<img src="https://user-images.githubusercontent.com/1423657/232089970-c4536f16-5967-4051-85a5-8ad94fcde67c.png" height="50" /> <img src="https://github.com/metrico/qryn/assets/1423657/546faddb-fbc6-4af5-9e32-4db6da10915d" height="49" />
-
+<center><img src="https://github.com/metrico/qryn/assets/1423657/546faddb-fbc6-4af5-9e32-4db6da10915d" height="49" /> <img src="https://user-images.githubusercontent.com/1423657/232089970-c4536f16-5967-4051-85a5-8ad94fcde67c.png" height="50" /></center>
 </div>
 <div className="custom-footer">
 <Footer />
