--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -15,13 +15,13 @@ import Footer from '../src/components/footer/Footer'
 
 <h1>Gigapipe Observability 🔮</h1>
 
-<h3><img src="https://avatars.githubusercontent.com/u/76224143?s=24&v=4" /> Gigapipe is a polyglot observability platform designed to unify logs, metrics, traces and profiles. </h3>
+<h3><img src="https://avatars.githubusercontent.com/u/76224143?s=24&v=4" class="img_inline" /> Gigapipe is a polyglot observability platform designed to unify logs, metrics, traces and profiles. </h3>
 
 Unlike traditional observability tools that silo data and require running multiple components _(LGTM, etc)_ Gigapipe's all-in-one approach reduces moving parts and allows fast correlation between different data types and formats, enhancing troubleshooting and insight generation for engineering teams, devops and business intelligence. _Your data, Your way._
 
 <br/>
 
-<h3><img src="https://avatars.githubusercontent.com/u/76224143?s=24&v=4" /> Drop-in compatible with Opentelemetry, Loki, Prometheus, Tempo, Pyroscope and beyond </h3>
+<h3><img src="https://avatars.githubusercontent.com/u/76224143?s=24&v=4" class="img_inline" /> Drop-in compatible with Opentelemetry, Loki, Prometheus, Tempo, Pyroscope and beyond </h3>
 
 Unlike traditional observability tools Gigapipe does not require custom software. We natively ingest Opentelemetry, Loki, Prometheus, Tempo, Pyroscope, Datadog, Influx, Elastic using thousands of compatible Agents you can choose from. Our query API emulates Loki, Prometheus, Tempo and Pyroscope. _If you used Grafana before, you can use Gigapipe._
 
