--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -23,7 +23,7 @@ Our polyglot observability stack  designed around the Observability standards th
 
 #### ☝️ Why did we create Gigapipe? 
 
-_We created [qryn/gigapipe](https://qryn.dev)_ from the ground up to handle infinite Logs, Metrics, Traces, Profiles - batteries included! 🔋
+_We created [qryn/gigapipe](https://qryn.dev)_ from the ground up to handle our observability - batteries included! 🔋
 
 > Gigapipe started in 2018 as “cLoki” and gradually evolved from a prototype into a mature, stable and independent observability stack able to act as a drop-in alternative to Grafana Cloud/LGTM and API compatible with multiple query and ingestion formats from popular observability vendors such as Opentelemetry, InfluxDB, Elastic, Datadog and many more. The beauty of Gigapipe is in its simplicity, acting as a lightweight transpiler on top of OLAP SQL storage without reinventing the wheel and offering its users performance, security and full ownership and control of their data without limitations and without obscure formats. Less is more, without giving up any feature.
 
