--- a/docs/docs/ingestion.mdx
+++ b/docs/docs/ingestion.mdx
@@ -66,16 +66,16 @@ Gigapipe provides a polyglot and robust data ingestion API - supporting logs, me
 
     <Tab label="Profiling">
         💡 Gigapipe supports Continuous Profiling ingestion using Pyroscope compatibility
-        #### Supported Protocols
+        #### 📍 Supported Protocols
         🔍 **Pyroscope**: Full API support for Pyroscope SDK Clients<br/>
         🔍 **OpenTelemetry Profiling**: Standardized profiling format to track application resource use<br/>
 
-        #### Supported Agents
+        #### 📍 Supported Agents
         📦 [Grafana Agent](https://grafana.com/docs/agent/latest/)<br/>
         📦 [Pyroscope Agent](https://pyroscope.io/)<br/>
         📦 [Parca Agent](https://www.parca.dev/)<br/>
 
-        #### [APIs](/docs/api)
+        #### 📍 [APIs](/docs/api)
         - **HTTP/REST API**: For sending profiling data to Gigapipe<br/>
     </Tab>
 </Tabs>
