--- a/docs/docs/demo.mdx
+++ b/docs/docs/demo.mdx
@@ -7,8 +7,9 @@ import { Tab, Tabs } from 'rspress/theme';
 ### 👁️‍🗨️ Grafana Explore
 
 Your Gigapipe account comes with a _built-in_ **Grafana** instance preconfigured with available datasources.
+Since Gigapipe is drop-in compatible with Grafana LGTM, there's nothing new to learn! 
 
-Let's start with the basics: Exploring our Logs, Metrics and Traces in our stack
+Let's start with the basics: Exploring our Logs, Metrics and Traces in Gigapipe
 
 <Tabs>
             <Tab label="Logs">
