--- a/docs/docs/demo.mdx
+++ b/docs/docs/demo.mdx
@@ -6,8 +6,8 @@ import { Tab, Tabs } from 'rspress/theme';
 
 ### 👁️‍🗨️ Grafana Explore
 
-Your Gigapipe account comes with a _built-in_ **Grafana** instance preconfigured with available datasources.
-Since Gigapipe is drop-in compatible with Grafana LGTM, there's nothing new to learn! 
+Your Gigapipe account comes with a _built-in_ preconfigured **Grafana** instance.
+Since we are drop-in compatible with Grafana LGTM, there's nothing new to learn! 
 
 Let's start with the basics: Exploring our Logs, Metrics and Traces in Gigapipe
 
