--- a/docs/signup.mdx
+++ b/docs/signup.mdx
@@ -7,10 +7,11 @@ nextPage: false
 
 import EarlyAccessForm from '../src/components/signup/EarlyAccessForm'
 
-# 🍳 Request Early Access to [Gigapipe](/pricing)
+# <img src="https://avatars.githubusercontent.com/u/76224143?s=30&v=4" class="img_inline" /> Request Access to [Gigapipe Cloud](/pricing)
 
-> _Please fill in you business details to receive an invitation 🎉_
+> _Due to high demand we currently validate new account requests_<br/>
+> _Please fill in you business details to receive a quick invitation 🎉_
 
 <EarlyAccessForm />
 
-> 🗨️ Urgent Activation Request? [Contact our Team](mailto:info@gigapipe.com) for express handling
+> 🗨️ Urgent Needs? [Contact our Team](mailto:info@gigapipe.com) for express intakes
