--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -102,8 +102,11 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             
             </Tab>
             <Tab label="Opentelemetry">
-            ⭐ Use the Gigapipe Opentelemtry distrubution or any OTel instance with native protocols<br/><br/>
-            
+            ⭐ Use Gigapipe with Opentelemetry Agents<br/><br/>
+            📦 [Gigapipe OTel Collector](https://github.com/metrico/otel-collector)<br/>
+            The **gigapipe-otel-collector** is designed to store observability data _(Traces, Logs, Metrics, Profiles)_ from multiple vendors/platforms into [ClickHouse](https://github.com/clickhouse/clicklhouse) using gigapipe _fingerprinting and table formats_ transparently accessible through gigapipe APIs via _LogQL, PromQL, Tempo and Pyroscope queries_.
+            <br/>
+            <img src="https://github.com/metrico/otel-collector/assets/1423657/692b54e9-88ef-49c8-996d-5dbd73ee0782" height="250" />
             </Tab>
       </Tabs>
       <br/>
