--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -15,7 +15,7 @@ import { PackageManagerTabs } from 'rspress/theme';
 
 Gigapipe qryn is a comprehensive observability platform designed to unify logs, metrics, traces and profiles in a single, seamless database. Unlike traditional tools that silo data, Gigapipe's all-in-one approach ensures automatic correlation between different data types, enhancing troubleshooting and insight generation for engineering teams.
 
-Our polyglot observability stack  designed around the Observability standards the world already loves 💜
+Our polyglot observability stack  designed around standards the world already loves 💜
 
 <img src="./public/giga_team.png" width="350px" alt="Founders" />
 
