fix: styles in about, pricing and footer

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -12,7 +12,7 @@ import Footer from '../src/components/footer/Footer'
 <Docs />
 
 <div className="custom-content">
-
+<div className="body">
 <h1>Gigapipe Observability 🔮</h1>
 
 <h3><img src="https://avatars.githubusercontent.com/u/76224143?s=24&v=4" class="img_inline" /> Gigapipe is a polyglot observability platform designed to unify logs, metrics, traces and profiles. </h3>
@@ -25,13 +25,16 @@ Unlike traditional observability tools that silo data and require running multip
 
 Unlike traditional observability tools Gigapipe does not require custom software. We natively ingest Opentelemetry, Loki, Prometheus, Tempo, Pyroscope, Datadog, Influx, Elastic using thousands of compatible Agents you can choose from. Our query API emulates Loki, Prometheus, Tempo and Pyroscope. _If you used Grafana before, you can use Gigapipe._
 
-<a href="/about"><img src="/qryn_cloud.png" alt="qryn_cloud" /></a>
+</div>
+<a href="/about"><img src="/qryn_cloud.png" alt="qryn_cloud"/></a>
 <br/>
-<center><img src="https://user-images.githubusercontent.com/1423657/232089970-c4536f16-5967-4051-85a5-8ad94fcde67c.png" height="50" class="img_small" />
+<center><img src="https://user-images.githubusercontent.com/1423657/232089970-c4536f16-5967-4051-85a5-8ad94fcde67c.png" height="50" className="img_small" />
 <br/>
-<img src="https://github.com/metrico/qryn/assets/1423657/546faddb-fbc6-4af5-9e32-4db6da10915d" height="49" class="img_small" />
+<img src="https://github.com/metrico/qryn/assets/1423657/546faddb-fbc6-4af5-9e32-4db6da10915d" height="49" className="img_small" />
 </center>
 </div>
+
+
 <div className="custom-footer">
 <Footer />
 </div>
