--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -83,8 +83,12 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             ⭐ Explore Logs using the native Tempo Datasource<br/>
             <SmoothIframe src="https://demo.arcade.software/G43G6ja4CHJYpF9rc3V2?embed" height="550px" />
             </Tab>
-            <Tab label="View">
-            ⭐ Explore Logs, Metrics and Traces using View<br/>
+            <Tab label="Profiles">
+            ⭐ Explore Continuous Profiling using the native Pyroscope Datasource<br/>
+            <SmoothIframe src="https://demo.arcade.software/xNDuB0hSZ6xGPIpwVP0C?embed" height="550px" />
+            </Tab>
+            <Tab label="GigaView">
+            ⭐ No Grafana? Explore Logs, Metrics and Traces using GigaView<br/>
             <img src="https://user-images.githubusercontent.com/1423657/200136242-f4133229-ee7c-45e0-8228-8734cf56140a.gif" width="100%" />
             </Tab>
       </Tabs>
