oss wizard update

--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -4,168 +4,9 @@ import { Steps } from '@theme';
 import { Tab, Tabs } from 'rspress/theme';
 import SmoothIframe from '../../src/components/SmoothIframe'
 
+import Wizard from "../../src/components/wizardoss/Wizard"
 
-# 🏁 Get Started with Gigapipe Open-Source
-
-Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘️
-
-<br/>
-
-<Steps>
-      ### Step 1
-
-      #### Install Gigapipe Open-Source on your Infrastructure.
-
-      <Tabs>
-            <Tab label="Quickstart">
-            Quick Start? Use our [OSS Gigapipe Demo](https://github.com/metrico/gigapipe-oss-demo)
-
-            The demo ships with Gigapipe, Grafana and ClickHouse ready to use<br/>
-
-            _🔋🔋🔋 batteries included - ships with config, data and datasources_ 
-
-            </Tab>
-            <Tab label="Docker">
-            Deploy `gigapipe` using Docker or K8s
-
-            ```
-            ghcr.io/metrico/gigapipe:latest
-            ```
-
-            > Configure Gigapipe using [ENV Settings](/docs/config)
-
-            > Gigapipe requires ClickHouse for data storage
-            
-            </Tab>
-            <Tab label="Docker Compose">
-            Deploy `gigapipe` using Docker Compose
-            ```
-            gigapipe:
-              image: ghcr.io/metrico/gigapipe:latest
-              container_name: gigapipe
-              hostname: gigapipe
-              pull_policy: always
-              restart: unless-stopped
-              ports:
-                - "3100:3100"
-              environment:
-                - CLICKHOUSE_SERVER=clickhouse-server
-                - CLICKHOUSE_PORT=9000
-                - CLICKHOUSE_AUTH=gigapipe:demo
-                - CLICKHOUSE_DB=qryn
-            ```
-
-            > Configure Gigapipe using [ENV Settings](/docs/config)
-
-            > Gigapipe requires ClickHouse for data storage
-            
-            </Tab>
-            
-      </Tabs>
-
-      ### Step 2
-
-      #### Configure your Observability Agents to send Data to Gigapipe
-
-      <Tabs>
-            <Tab label="Logs">
-            ⭐ Use any Loki compatible Agent or Client<br/><br/>
-            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) <br/>
-            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) <br/>
-            📦 [Vector](https://vector.dev/) <br/>
-            📦 [Opentelemetry](https://github.com/metrico/otel-collector) <br/>
-            📦 [Telegraf](https://www.influxdata.com/time-series-platform/telegraf/) <br/>
-            📦 [Fluentd](https://www.fluentd.org/) <br/>
-            📦 [Logstash](https://opensearch.org/docs/latest/tools/logstash/index/)<br/>
-            
-            </Tab>
-            <Tab label="Metrics">
-            ⭐ Use any Prometheus compatible Agent or Client<br/><br/>
-            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) <br/>
-            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) <br/>
-            📦 [Vector](https://vector.dev/) <br/>
-            📦 [Opentelemetry](https://github.com/metrico/otel-collector)<br/>
-            
-            </Tab>
-            <Tab label="Traces">
-            ⭐ Use any Tempo/Zipkin compatible Agent or Client<br/><br/>
-            📦 [Grafana Alloy](https://grafana.com/docs/alloy/latest/) <br/>
-            📦 [Grafana Agent](https://grafana.com/docs/agent/latest/) <br/>
-            📦 [Zipkin](https://zipkin.io/) <br/>
-            📦 [Opentelemetry](https://github.com/metrico/otel-collector)<br/>
-            
-            </Tab>
-            <Tab label="Profiles">
-            ⭐ Use any Pyroscope SDK compatible Agent or Client<br/><br/>
-            📦 [Grafana Pyroscope SDK](https://grafana.com/docs/pyroscope/latest/configure-client/language-sdks/) <br/>
-            📦 [Grafana Agent](https://grafana.com/docs/pyroscope/latest/configure-client/grafana-agent/go_pull/) <br/>
-            
-            </Tab>
-            <Tab label="Opentelemetry">
-            ⭐ Use Gigapipe with Opentelemetry Agents<br/><br/>
-            📦 [Gigapipe OTel Collector](https://github.com/metrico/otel-collector)<br/>
-            The **gigapipe-otel-collector** is designed to store observability data _(Traces, Logs, Metrics, Profiles)_ from multiple vendors/platforms into [ClickHouse](https://github.com/clickhouse/clicklhouse) using gigapipe _fingerprinting and table formats_ transparently accessible through gigapipe APIs via _LogQL, PromQL, Tempo and Pyroscope queries_.
-            <br/>
-            <img src="https://github.com/metrico/otel-collector/assets/1423657/692b54e9-88ef-49c8-996d-5dbd73ee0782" height="250" />
-            </Tab>
-      </Tabs>
-      <br/>
-
-      ### Step 3
-
-      #### Use Grafana to start Exploring your Gigapipe dataset
-      Gigapipe is compatible with Grafana Loki, Prometheus, Tempo and Pyroscope datasources
-      <br/>
-
-      <Tabs>
-            <Tab label="Logs">
-            ⭐ Explore Logs using the native Loki Datasource<br/>
-            <SmoothIframe src="https://demo.arcade.software/GKaq4SJRBPYyCZgoWBoM?embed" height="550px" />
-            </Tab>
-            <Tab label="Metrics">
-            ⭐ Explore Logs using the native Prometheus/Mimir Datasource<br/>
-            <SmoothIframe src="https://demo.arcade.software/r2A4ia93hPs96pyiaFQx?embed" height="550px" />
-            </Tab>
-            <Tab label="Traces">
-            ⭐ Explore Logs using the native Tempo Datasource<br/>
-            <SmoothIframe src="https://demo.arcade.software/G43G6ja4CHJYpF9rc3V2?embed" height="550px" />
-            </Tab>
-            <Tab label="Profiles">
-            ⭐ Explore Profiles using the native Pyroscope Datasource<br/>
-            <SmoothIframe src="https://github.com/metrico/qryn-docs/assets/1423657/3fe7167e-504a-42c0-bf51-bdb090ce0f6b" height="550px" />
-            </Tab>
-            <Tab label="View">
-            ⭐ No Grafana? Explore Logs, Metrics and Traces using Gigapipe View<br/>
-            <img src="https://user-images.githubusercontent.com/1423657/200136242-f4133229-ee7c-45e0-8228-8734cf56140a.gif" width="100%" />
-            </Tab>
-      </Tabs>
-      <br/>
-
-      ### Step 4
-
-      #### Sky is the limit! Any tutorial or example from Grafana Cloud should work as-is in Gigapipe.
-
-      <br/>
-
-
-      <img src="https://user-images.githubusercontent.com/1423657/184538094-13c11500-24ef-4468-9f33-dc9d564238e3.gif" width="100%" />
-
-      <br/>
-
-      ### Step 5
-      **There's no step 5!** You're already done! 🎉 <br/>
-
-      If you've used **Grafana** or **Grafana Cloud** before, _You will feel right at home._ 
-
-      ... and since there's nothing new to learn, the Team can just focus on _data._ **Whoo-hoo!** 🎉 
-
-      ##### Community Support
-
-      Dealing with issues? Join our community and connect with other users for help.
-
-</Steps>
-
-<br/>
+<Wizard />
 
 :::warning AGPLv3
 Gigapipe is licensed under the AGPLv3 License and available on Github
