--- a/docs/docs/config.mdx
+++ b/docs/docs/config.mdx
@@ -48,5 +48,6 @@ The following `ENV` parameters can be used to control **gigapipe** parameters an
 | ADVANCED_SAMPLES_ORDERING | timestamp_ns | Specify the 'ORDER BY' your samples table should use (for multiple use comma-separated list fingerprint,timestamp_ns) |
 | BULK_MAX_SIZE_BYTE |  | max size of the bulk in bytes _(empty = infinite)_ |
 | BULK_MAX_AGE_MS | 100  | max age of the bulk in milliseconds. Minimum value 100ms |
-| MODE | all  | `all`, `writer`, `reader`, `init_only` _(init db and exit)_
+| MODE | all  | `all`, `writer`, `reader`, `init_only` _(init db and exit)_ |
+| SELF_SIGNED_CERT | false | Allow self-signed certificates |
 
