--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -17,16 +17,8 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
       #### Install Gigapipe Open-Source on your Infrastructure.
 
       <Tabs>
-            <Tab label="Quickstart">
-            Quick Start? Use our [OSS Gigapipe Demo](https://github.com/metrico/gigapipe-oss-demo)
-
-            The demo ships with Gigapipe, Grafana and ClickHouse ready to use<br/>
-
-            _🔋🔋🔋 batteries included - ships with config, data and datasources_ 
-
-            </Tab>
             <Tab label="Docker">
-            Deploy `gigapipe` using Docker or K8s
+            ⭐ Deploy `gigapipe` in seconds using Docker or Kubernetes
 
             ```
             ghcr.io/metrico/gigapipe:latest
@@ -59,6 +51,14 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
 
             > Gigapipe requires ClickHouse for data storage
             
+            </Tab>
+            <Tab label="Demo Quickstart">
+            Quick Start? Use our [OSS Gigapipe Demo](https://github.com/metrico/gigapipe-oss-demo)
+
+            The demo ships with Gigapipe, Grafana and ClickHouse ready to use<br/>
+
+            _🔋🔋🔋 batteries included - ships with config, data and datasources_ 
+
             </Tab>
             
       </Tabs>
