--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -20,7 +20,7 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             <Tab label="Docker">
             ⭐ Deploy `gigapipe` in seconds using Docker or Kubernetes
 
-            ```
+            ```tsx title="Docker Container"
             ghcr.io/metrico/gigapipe:latest
             ```
 
@@ -31,7 +31,7 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             </Tab>
             <Tab label="Docker Compose">
             Deploy `gigapipe` using Docker Compose
-            ```
+            ```yaml title="Docker Compose"
             gigapipe:
               image: ghcr.io/metrico/gigapipe:latest
               container_name: gigapipe
