--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -14,7 +14,7 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
 <Steps>
       ### Step 1
 
-      #### Install Gigapipe Open-Source on your Infrastructure.
+      #### Install Gigapipe Open-Source on your Infrastructure
 
       <Tabs>
             <Tab label="Docker">
