--- a/docs/docs/oss.mdx
+++ b/docs/docs/oss.mdx
@@ -65,7 +65,7 @@ Welcome to your _ready-to-use_ managed Observability stack - _just add data_ ☘
             && chmod +x gigapipe_arm64
             ```
 
-            📦 [Packages](https://github.com/metrico/gigapipe/releases) are available for `deb` and `rpm` based distributions
+            📦 [Gigapipe packages](https://github.com/metrico/gigapipe/releases) are available for `deb` and `rpm` based distributions
 
             > Configure Gigapipe using [ENV Settings](/docs/config)
 
