--- a/docs/gigapi.mdx
+++ b/docs/gigapi.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar: true
+sidebar: false
 outline: true
 navbar: true
 nextPage: false
@@ -7,7 +7,7 @@ nextPage: false
 
 import { PackageManagerTabs } from 'rspress/theme';
 
-# <a href="https://github.com/gigapi/gigapi" target="_blank"><img src="https://github.com/user-attachments/assets/5b0a4a37-ecab-4ca6-b955-1a2bbccad0b4" /></a>
+<img src="https://github.com/user-attachments/assets/5b0a4a37-ecab-4ca6-b955-1a2bbccad0b4" />
 
 # <img src="https://github.com/user-attachments/assets/74a1fa93-5e7e-476d-93cb-be565eca4a59" height=25 /> GigAPI Storage Engine
 
