--- a/docs/gigapi.mdx
+++ b/docs/gigapi.mdx
@@ -1,3 +1,12 @@
+---
+sidebar: true
+outline: true
+navbar: true
+nextPage: false
+---
+
+import { PackageManagerTabs } from 'rspress/theme';
+
 <img src="https://github.com/user-attachments/assets/5b0a4a37-ecab-4ca6-b955-1a2bbccad0b4" />
 
 # <img src="https://github.com/user-attachments/assets/74a1fa93-5e7e-476d-93cb-be565eca4a59" height=25 /> GigAPI Storage Engine
