--- a/docs/gigapi.mdx
+++ b/docs/gigapi.mdx
@@ -9,13 +9,13 @@ import { PackageManagerTabs } from 'rspress/theme';
 
 <img src="https://github.com/user-attachments/assets/5b0a4a37-ecab-4ca6-b955-1a2bbccad0b4" />
 
-# <img src="https://github.com/user-attachments/assets/74a1fa93-5e7e-476d-93cb-be565eca4a59" height=25 /> GigAPI Storage Engine
+# GigAPI Storage Engine
 
 Like a durable parquet floor, GigAPI provides rock-solid data foundation for your queries and analytics
 
 > GigAPI by Gigapipe is our twist on future query engines – one where you focus on your data, not your infrastructure, servers or capacity. By combining the performance of DuckDB with cloud-native architecture principles we've created a simple and light solution designed for unlimited time series and analytical datasets that makes traditional server-based OLAP databases feel like costly relics and decimating infrastructure costs by 50-90% without performance loss. All 100% opensource - no open core cloud gimmicks.
 
-### <img src="https://github.com/user-attachments/assets/a9aa3ebd-9164-476d-aedf-97b817078350" width=18 /> Features
+### Features
 
 * Fast: DuckDB SQL + Parquet powered OLAP API Engine
 * Flexible: Schema-less Parquet Ingestion & Compaction
