--- a/docs/gigapi.mdx
+++ b/docs/gigapi.mdx
@@ -9,7 +9,9 @@ import { PackageManagerTabs } from 'rspress/theme';
 
 <img src="https://github.com/user-attachments/assets/5b0a4a37-ecab-4ca6-b955-1a2bbccad0b4" />
 
-# GigAPI Storage Engine
+<br />
+
+## GigAPI Storage Engine
 
 Like a durable parquet floor, GigAPI provides rock-solid data foundation for your queries and analytics
 
@@ -22,3 +24,6 @@ Like a durable parquet floor, GigAPI provides rock-solid data foundation for you
 * Simple: Low Maintenance, Portable, Infinitely Scalable
 * Smart: Independent storage/write and compute/read components
 * Extensible: Built-In Query Engine _(DuckDB)_ or DIY _(ClickHouse, Datafusion, etc)_
+
+### Early Access
+GigAPI is developed in public. You can test and explore [https://github.com/gigapi](GigAPI alpha releases on github)
